<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageButton
        android:id="@+id/imageButton_excluir"
        android:layout_width="300dp"
        android:layout_height="450dp"
        android:contentDescription="@string/btn_delete"
        android:onClick="excluir"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.975"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1"
        app:srcCompat="@drawable/excluir" />

    <ImageButton
        android:id="@+id/imageButton_adicionar"
        android:layout_width="300dp"
        android:layout_height="450dp"
        android:contentDescription="@string/btn_create_update"
        android:onClick="adicionar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1"
        app:srcCompat="@drawable/adiconar" />

    <ImageButton
        android:id="@+id/imageButton_pesquisar"
        android:layout_width="300dp"
        android:layout_height="450dp"
        android:contentDescription="@string/btn_read"
        android:onClick="pesquisar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.025"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1"
        app:srcCompat="@drawable/pesquisar" />

    <ImageButton
        android:id="@+id/imageButton_sair"
        android:layout_width="300dp"
        android:layout_height="75dp"
        android:contentDescription="@string/btn_exit"
        android:onClick="exit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.975"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.975"
        app:srcCompat="@drawable/sair" />

    <ImageButton
        android:id="@+id/imageButton_sobre"
        android:layout_width="300dp"
        android:layout_height="75dp"
        android:contentDescription="@string/btn_about"
        android:onClick="sobre"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.975"
        app:srcCompat="@drawable/sobre" />

    <ImageButton
        android:id="@+id/imageButton_opcoes"
        android:layout_width="300dp"
        android:layout_height="75dp"
        android:contentDescription="@string/btn_options"
        android:onClick="opcoes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.025"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.975"
        app:srcCompat="@drawable/option" />

</androidx.constraintlayout.widget.ConstraintLayout>